--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -1,3 +1,9 @@
+h1{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
@@ -16,3 +22,9 @@ img {
 }
 
 /* Voeg jouw css hieraan toe */
+
+h1{
+    margin: 0 auto;
+    padding: 2% 0;
+    background-color: rgb(15, 15, 15);
+}
