--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -27,7 +27,7 @@ img {
 /*Fonts*/
 @font-face {
     font-family: 'band';
-    src: url('../fonts/band.ttf');
+    src: url('../images/band.ttf');
 }
 
 /*Introductie*/
