--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -43,11 +43,11 @@ img {
     padding: 2% 0;
     background-color: #0f0f0f;
     color:#d17b60;
-    font-family: 'band';
+    font-family: 'Righteous', cursive;
 }
 
 h1, h2, a, h3{
-    font-family: 'band';
+    font-family: 'Righteous', cursive;
     color:#d17b60;
 }
 
