--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -78,3 +78,34 @@ img{
 figure{
     padding-top: 3%;
 }
+
+/*styleguide*/
+.logo{
+    height: 100px;
+    padding-left: 7%;
+}
+
+.datum{
+    height: 100px;
+    padding-left: 10%;
+}
+.foto{
+    height: 300px;
+    padding-left: 10%;
+}
+
+h4{
+    font-family: 'Source Sans Pro', sans-serif;
+    padding-left: 9%;
+    font-size: 18pt;
+    color: #EEE;
+}
+
+h5{
+    font-family: 'Source Sans Pro', sans-serif;
+    padding-left: 9%;
+    font-size: 50pt;
+    color: #EEE;
+    padding-bottom: -100px;
+    margin: 10px;
+}
